CorrectSpacingOfScreen

--- a/src/public/css/drawStyle.css
+++ b/src/public/css/drawStyle.css
@@ -135,11 +135,11 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2500;
+  z-index: 2000;
 }
 
 .waiting-content {
-  z-index: 3000;
+  z-index: 2000;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -163,23 +163,27 @@ body {
   position: fixed;
   /* top: 0;
   left: 0; */
-  width: 80%;
-  height: 90%;
-  background-color: rgba(55, 60, 9b, 0.99); /* Semi-opaque overlay */
+  width: 100%;
+  height: 100%;
+  background-color: #55609b;
   z-index: 10000;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 #RoundOverHeading,
 #EndScreenUpperPrompt,
 #roundOverContainer,
 #EndScreenLowerPrompt,
 #NextSetButtonBlock {
+  width: 80%;
   background-color: #ffffff;
   padding: 10px;
   border: 2px solid #000000;
